fixed broken links

--- a/help/help_cs.htm
+++ b/help/help_cs.htm
@@ -40,8 +40,8 @@ Je vždy užitečné prečíst si dokumentaci <em>dříve</em>, než vyrobíte n
 Je možné ho používat pouze s verzemi v kódovaní UTF-8,
 tedy od CMSimple_XH 1.2. Navíc musíte mít nainstalovaný též plugin jQuery4CMSimple.
 Tento bude součástí všech dalších verzí, počínajíc CMSimple_XH-Verze 1.4.1.
-Pokud používáte některou starší verzi, je nejlepší 
-<a href="http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple">
+Pokud používáte některou starší verzi, je nejlepší
+<a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple stáhnout</a> a nainstalovat, než budete pokračovat dále.</p>
 <div class="toplink"><a href="#">NAHORU</a></div>
 
@@ -133,7 +133,7 @@ V tomto případě nemůžete používat Pagemanager_XH, neboť ten Vaši strukt
 Pokud chcete Pagemanager_XH přesto používat,
 musíte takové stránky (např.) ukrýt jiným způsobem
 (podívejte se na záložku 'Stránky' pod editorem).
-Když ale nevíte <em>přesně</em>, 
+Když ale nevíte <em>přesně</em>,
 zda tato mimořádnost není náhodná a neúmyslná, nejprve se zeptejte správce stránky.
 <strong>Pomoc v případech poškození stránek z důvodu použití Pagemanager_XH na stránce s nepravidelnou strukturou není zaručena ani na CMSimple Forum!</strong></p>
 <p>Pokud používáte na stránce nepravidelnou strukturu vědomě, <em>nepoužívejte Pagemanager_XH.</em>
@@ -150,7 +150,7 @@ Proto musí být všechny takové kódy aktualizovány!</p>
 <div class="toplink"><a href="#">NAHORU</a></div>
 
 <h2><a name="license">Licence</a></h2>
-<p>Pagemanager_XH je uvolněn pod licencí 
+<p>Pagemanager_XH je uvolněn pod licencí
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
 <p>Slovenský překlad &copy; 2011 Dr. Martin Sereday<br>
@@ -166,8 +166,8 @@ Polský překlad &copy; 2012 Kamil Krzes</p>
 Poděkování Ivanovi Bozhanovovi, autorovi této knihovny.</p>
 <p>jsTree používá <a href="http://jQuery.com">jQuery</a>.
 Poděkování všem vývojářům tohoto skvělého Javascript Frameworks.</p>
-<p>jQuery bylo pro CMSimple_XH poskytnuto prostředníctvím 
-<a href="http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple">
+<p>jQuery bylo pro CMSimple_XH poskytnuto prostředníctvím
+<a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple</a>.
 Poděkování patří Holgerovi Irmlerovi, autorovi tohoto pluginu.</p>
 <p>Ikony v pluginu vytvořil <a href="http://milanioom.deviantart.com/">Milan Jovanović</a>.
@@ -178,12 +178,12 @@ Poděkování za bezplatné poskytnutí ikon.</p>
 za návrhy, testování, úpravy a podporu.
 Chtěl bych poděkovat hlavně "snafu", jehož včasná zpětná vazba mě povzbudila,
 abych se pluginu Pagemanager_XH dále věnoval.
-Děkuji též Ulrichovi, který odhalil jednu závažnou chybu (a několik menších problémů) a 
+Děkuji též Ulrichovi, který odhalil jednu závažnou chybu (a několik menších problémů) a
 pomohl při jejich odstranění tím, že poskytl detailní vysvětlení, o co vlastně šlo.
 Velký dík patří i Gertovi, který poskytl příjemný dizajn, udělal některé úpravy a překlady, a poskytl též mnoho cenných rad.
 V každém případě chci poděkovat i Martinovi, jehož report o problémech s kontextovým menu mě inspiroval k doplnění nástrojové lišty.
 Stejně tak děkuji "Tatovi" za nápad s posuvnou nástrojovou lištou.</p>
-<p>A, samozřejmě, obrovské poděkování všem vývojářům <a href="http://www.cmsimple-xh.com">CMSimple_XH</a>,
+<p>A, samozřejmě, obrovské poděkování všem vývojářům <a href="http://www.cmsimple-xh.org/">CMSimple_XH</a>,
 bez kterých by tento CMS neexistoval.</p>
 <div class="toplink"><a href="#">NAHORU</a></div>
 
