--- a/help/help.htm
+++ b/help/help.htm
@@ -42,14 +42,14 @@ It requires a UTF-8 encoded version,
 i.e. it's usable from CMSimple_XH 1.2 on. Additionally it requires the
 jQuery4CMSimple plugin. This will be already installed in all versions of CMSimple_XH since 1.4.1.
 If you have an older version, it's best to download and install
-<a href="http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple">
+<a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple</a> before proceeding. Furthermore Pagemanager_XH requires
 <a href="http://3-magi.net/?CMSimple_XH/Utf8_XH">Utf8_XH</a>.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="installation">Installation</a></h2>
 <p>The installation is done as with many other CMSimple_XH plugins.
-See the <a href="http://www.cmsimple-xh.com/wiki/doku.php/manuals:users_manual:plugins:installation">
+See the <a href="http://www.cmsimple-xh.org/wiki/doku.php/installation">
 CMSimple_XH wiki</a> for further details.</p>
 <ol>
 <li>Backup the data on your server.</li>
@@ -144,7 +144,7 @@ Your old page structure will be presented again.</p>
 <p>It is possible that your existing website has an irregular page structure.
 E.g. after an &lt;h1&gt; heading follows immediatly an &lt;h3&gt; heading
 without an &lt;h2&gt; heading in between.</p>
-<p>You can check the regularity of your page structure 
+<p>You can check the regularity of your page structure
 with Pagemanager_XH. It will warn you of any irregularities
 and will let you proceed only, if you explicitly confirm!
 If you do not proceed, no harm will be done.</p>
@@ -202,7 +202,7 @@ Many thanks to Ivan Bozhanov, the developer of this library.</p>
 <p>jsTree uses <a href="http://jQuery.com">jQuery</a>.
 Many thanks to all developers of this great javascript framework.</p>
 <p>jQuery is made available for CMSimple_XH by
-<a href="http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple">
+<a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple</a>. Many thanks to Holger Irmler, the author of this plugin.</p>
 <p>The plugin icon is designed by <a href="http://milanioom.deviantart.com/">Milan Jovanović</a>.
 Many thanks for making this icon freely available.</p>
@@ -219,7 +219,7 @@ and many valuable hints.
 I also want to thank Martin, whose report about problems with the context menu
 inspired the addition of the toolbar,
 and Tata who inspired the "scrolling" toolbar.</p>
-<p>And last but not least many thanks to all developers of <a href="http://www.cmsimple-xh.com">
+<p>And last but not least many thanks to all developers of <a href="http://www.cmsimple-xh.org/">
 CMSimple_XH</a> without whom this amazing CMS wouldn't exist.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
