added Dutch translation (contributed by roze)

--- a/help/help_cs.htm
+++ b/help/help_cs.htm
@@ -158,7 +158,8 @@ Proto musí být všechny takové kódy aktualizovány!</p>
 Dánský překlad &copy; 2011 Jens Maegaard<br>
 Francouzský překlad &copy; 2011 Patrick Varlet<br>
 Překlad do ruštiny &copy; 2012 Lybomyr Kydray<br>
-Polský překlad &copy; 2012 Kamil Krzes</p>
+Polský překlad &copy; 2012 Kamil Krzes<br>
+Holandský překlad &copy; 2012 Rob Zeijen</p>
 <div class="toplink"><a href="#">NAHORU</a></div>
 
 <h2><a name="credits">Vývojáři</a></h2>
