--- a/help/help.htm
+++ b/help/help.htm
@@ -193,7 +193,8 @@ Czech translation &copy; 2011-2012 Josef Nemec<br>
 Danish translation &copy; 2011 Jens Maegaard<br>
 French translation &copy; 2011 Patrick Varlet<br>
 Russian translation &copy; 2012 Lybomyr Kydray<br>
-Polish translation &copy; 2012 Kamil Krzes</p>
+Polish translation &copy; 2012 Kamil Krzes<br>
+Dutch translation &copy; 2012 Rob Zeijen</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
