--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -208,7 +208,8 @@ Tschechische Übersetzng &copy; 2011-2012 Josef Nemec<br>
 Dänische Übersetzung &copy; 2011 Jens Maegaard<br>
 Französische Übersetzung &copy; 2011 Patrick Varlet<br>
 Russische Übersetzung &copy; 2012 Lybomyr Kydray<br>
-Polnische Übersetzung &copy; 2012 Kamil Krzes</p>
+Polnische Übersetzung &copy; 2012 Kamil Krzes<br>
+Niederländische Übersetzung &copy; 2012 Rob Zeijen</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
 <h2><a name="credits">Danksagungen</a></h2>
