--- a/help/help_sk.htm
+++ b/help/help_sk.htm
@@ -158,7 +158,8 @@ Preto musia byť všetky takéto kódy aktualizované!</p>
 Dánsky preklad &copy; 2011 Jens Maegaard<br>
 Francúzsky preklad &copy; 2011 Patrick Varlet<br>
 Preklad do ruštiny &copy; 2012 Lybomyr Kydray<br>
-Poľský preklad &copy; 2012 Kamil Krzes</p>
+Poľský preklad &copy; 2012 Kamil Krzes<br>
+Holandský preklad &copy; 2012 Rob Zeijen</p>
 <div class="toplink"><a href="#">HORE</a></div>
 
 <h2><a name="credits">Poďakovanie</a></h2>
