--- a/help/help_sk.htm
+++ b/help/help_sk.htm
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     "http://www.w3.org/TR/html4/loose.dtd">
-<!-- utf8-marker: äöü -->
-<html>
+<html lang="sk">
 
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
-<meta name="content-language" content="de">
 <title>Pagemanager_XH - Návod</title>
 <link rel="stylesheet" type="text/css" href="./stylesheet.css">
 </head>
