replaced plugin icon

--- a/help/help.htm
+++ b/help/help.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Pagemanager_XH - a CMSimple_XH Plugin</h1>
-<img src="../pagemanager.png" style="display:block; float:left">
+<img src="../pagemanager.png" style="float:left; margin-right:16px">
 <p>Pagemanager_XH simplifies the administration of pages of a
 CMSimple_XH installation.
 This plugin is comparable to the Menumanager plugin with regard to functionality,
@@ -203,8 +203,8 @@ Many thanks to all developers of this great javascript framework.</p>
 <p>jQuery is made available for CMSimple_XH by
 <a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple</a>. Many thanks to Holger Irmler, the author of this plugin.</p>
-<p>The plugin icon is designed by <a href="http://milanioom.deviantart.com/">Milan Jovanović</a>.
-Many thanks for making this icon freely available.</p>
+<p>The plugin icon is designed by <a href="http://www.everaldo.com/">Everaldo Coelho</a>.
+Many thanks for publishing this icon under GPL.</p>
 <p>This plugin uses free applications icons from <a href="http://www.aha-soft.com/">Aha-Soft</a>.
 Many thanks to making these icons freely available.</p>
 <p>Many thanks to the community at the <a href="http://www.cmsimpleforum.com">CMSimple forum</a>
