--- a/help/help_cs.htm
+++ b/help/help_cs.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Pagemanager_XH - CMSimple_XH Plugin</h1>
-<img src="../pagemanager.png" style="display:block; float:left">
+<img src="../pagemanager.png" style="float:left; margin-right:16px">
 <p>Pagemanager_XH zjednodušuje správu stránek v instalaci CMSimple_XH.
 Tento plugin je svojí funkčností srovnatelný s pluginem Menumanager,
 ale díky stromové struktuře je i při rozsáhlejších stránkách přehlednější.
@@ -169,8 +169,9 @@ Poděkování všem vývojářům tohoto skvělého Javascript Frameworks.</p>
 <a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple</a>.
 Poděkování patří Holgerovi Irmlerovi, autorovi tohoto pluginu.</p>
-<p>Ikony v pluginu vytvořil <a href="http://milanioom.deviantart.com/">Milan Jovanović</a>.
-Poděkování za bezplatné poskytnutí ikon.</p>
+<p>Ikony v pluginu vytvořil <a href="http://www.everaldo.com/">Everaldo Coelho</a>.
+<del>Poděkování za bezplatné poskytnutí ikon.</del>
+<ins>Many thanks for publishing this icon under GPL.</ins></p>
 <p>Plugin používá "free application icons" od <a href="http://www.aha-soft.com/">Aha-Soft</a>.
 Poděkování za bezplatné poskytnutí ikon.</p>
 <p>Poděkování také celé komunitě <a href="http://www.cmsimpleforum.com">CMSimple-Forum</a>
