--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Pagemanager_XH - ein CMSimple_XH Plugin</h1>
-<img src="../pagemanager.png" style="display:block; float:left">
+<img src="../pagemanager.png" style="float:left; margin-right:16px">
 <p>Pagemanager_XH vereinfacht die Verwaltung von Seiten in einer
 CMSimple_XH-Installation.
 Dieses Plugin ist vom Funktionsumfang vergleichbar mit dem Menumanager-Plugin,
@@ -219,8 +219,8 @@ Vielen Dank allen Entwicklern dieses großartigen Javascript Frameworks.</p>
 <a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple</a> zur Verfügung gestellt.
 Vielen Dank an Holger Irmler, den Entwickler dieses Plugins.</p>
-<p>Das Plugin-Icon wurde von <a href="http://milanioom.deviantart.com/">Milan Jovanović</a> entworfen.
-Vielen Dank für die frei Verwendbarkeit dieses Icons.</p>
+<p>Das Plugin-Icon wurde von <a href="http://www.everaldo.com/">Everaldo Coelho</a> entworfen.
+Vielen Dank für die Veröffentlichung unter GPL.</p>
 <p>Dieses Plugin verwendet "free application icons" von <a href="http://www.aha-soft.com/">Aha-Soft</a>.
 Vielen Dank für die freie Verwendbarkeit dieser Icons.</p>
 <p>Vielen Dank an die Gemeinschaft im <a href="http://www.cmsimpleforum.com">CMSimple-Forum</a>
