--- a/help/help_sk.htm
+++ b/help/help_sk.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Pagemanager_XH - CMSimple_XH Plugin</h1>
-<img src="../pagemanager.png" style="display:block; float:left">
+<img src="../pagemanager.png" style="float:left; margin-right:16px">
 <p>Pagemanager_XH zjednodušuje spravovanie stránok v inštalácii CMSimple_XH.
 Tento plugin je svojou funkčnosťou porovnateľný s pluginom Menumanager,
 ale vďaka stromovej štruktúre je aj pri rozsiahlejších stránkach prehľadnejší.
@@ -169,8 +169,8 @@ Vďaka všetkým vývojárom tohto skvelého Javascript Frameworks.</p>
 <a href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
 jQuery4CMSimple</a>.
 Vďaka patri Holgerovi Irmlerovi, Autorovi tohto pluginu.</p>
-<p>The plugin icon is designed by <a href="http://milanioom.deviantart.com/">Milan Jovanović</a>.
-Many thanks for making this icon freely available.</p>
+<p><ins>The plugin icon is designed by <a href="http://www.everaldo.com/">Everaldo Coelho</a>.
+Many thanks for publishing this icon under GPL.</ins></p>
 <p>Plugin používa "free application icons" od <a href="http://www.aha-soft.com/">Aha-Soft</a>.
 Vďaka za bezpaltné poskytnutie ikon.</p>
 <p>Vďaka aj celej komunite <a href="http://www.cmsimpleforum.com">CMSimple-Forum</a>
