added Dutch localization (contributed by bastingse)

--- a/help/help.htm
+++ b/help/help.htm
@@ -168,6 +168,7 @@ So offending extensions should be updated!</p>
 <p>&copy; 2011-2014 Christoph M. Becker</p>
 <p>Czech translation &copy; 2011-2014 Josef Němec<br>
 Danish translation &copy; 2011-2014 Jens Maegaard<br>
+Dutch translation &copy; 2014 Emile Bastings<br>
 Estonian translation &copy; 2014 Alo Tanavots<br>
 French translation &copy; 2011-2014 Patrick Varlet<br>
 Italian translation &copy; 2014 Milko Dalla Battista<br>
