--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -189,6 +189,7 @@ die sich nicht daran halten!</p>
 Estnische Übersetzung &copy; 2014 Alo Tanavots<br>
 Französische Übersetzung &copy; 2011-2014 Patrick Varlet<br>
 Italienische Übersetzung &copy; 2014 Milko Dalla Battista<br>
+Niederländische Übersetzung &copy; 2014 Emile Bastings<br>
 Slovakische Übersetzung &copy; 2011-2014 Dr. Martin Sereday<br>
 Tschechische Übersetzung &copy; 2011-2014 Josef Němec</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
