--- a/help/help.htm
+++ b/help/help.htm
@@ -33,13 +33,16 @@ submenus.</p>
 <p><strong>Please do read this documentation <em>before</em> you encounter any
 problems!</strong></p>
 
-<h2 id="requirements">Requirements</h2>
+<section id="requirements">
+<h2>Requirements</h2>
 <p>Pagemanager_XH is a plugin for CMSimple_XH. Pagemanager_XH 3 requires
 CMSimple_XH &ge; 1.7. Additionally it requires the jQuery4CMSimple plugin, which
 is already contained in the standard download of CMSimple_XH since 1.4.1.</p>
 <div class="toplink"><a href="#">back to top</a></div>
+</section>
 
-<h2 id="installation">Installation</h2>
+<section id="installation">
+<h2>Installation</h2>
 <p>The installation is done as with many other CMSimple_XH plugins.
 See the <a href="http://www.cmsimple-xh.org/wiki/doku.php/installation">
 CMSimple_XH wiki</a> for further details.</p>
@@ -54,8 +57,10 @@ languages/.</li>
 check if all requirements are fulfilled.</li>
 </ol>
 <div class="toplink"><a href="#">back to top</a></div>
+</section>
 
-<h2 id="settings">Settings</h2>
+<section id="settings">
+<h2>Settings</h2>
 <p>The plugin's configuration is done as with many other CMSimple_XH plugins in
 the website's back-end. Select "Pagemanager" from "Plugins".</p>
 <p>You can change the default settings of Pagemanager_XH in "Config". Hints for
@@ -67,8 +72,10 @@ to your own language, or customize them according to your needs.</p>
 you should look for the settings that are commented out. Maybe you like to try
 them.</p>
 <div class="toplink"><a href="#">back to top</a></div>
+</section>
 
-<h2 id="usage">Usage</h2>
+<section id="usage">
+<h2>Usage</h2>
 <img class="image-right" style="max-width: 100%" src="pagemanager.png"
 alt="Pagemanager_XH screenshot">
 <p>This plugin is used exclusively in CMSimple_XH's backend. It is started by
@@ -92,7 +99,7 @@ shown by a red cross or you will simply be not allowed to drop there. <em>So
 carefully watch the markers,</em> until you get a feeling how the drag&amp;drop
 works. If you hold down the CTRL key while dragging, the result will be a copy
 instead of a move operation.</p>
-<table border="1" style="margin: auto">
+<table style="margin: auto">
 <caption><strong>Examples of drag&amp;drop move operations</strong></caption>
 <tr><th>during move</th><th>after move</th></tr>
 <tr>
@@ -134,8 +141,10 @@ it is possible to adjust details afterwards.</p>
 up your page structure simply refresh your browser's view <em>without</em>
 saving before. Your old page structure will be presented again.</p>
 <div class="toplink"><a href="#">back to top</a></div>
+</section>
 
-<h2 id="limitations">Limitations</h2>
+<section id="limitations">
+<h2>Limitations</h2>
 
 <h3>Irregular page structures</h3>
 <p>It is possible that your existing website has an irregular page structure.
@@ -161,8 +170,10 @@ with all their jQuery based code for CMSimple_XH.
 So offending extensions should be updated!</p>
 
 <div class="toplink"><a href="#">back to top</a></div>
+</section>
 
-<h2 id="license">License</h2>
+<section id="license">
+<h2>License</h2>
 <p>Pagemanager_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2011-2015 Christoph M. Becker</p>
@@ -174,8 +185,10 @@ French translation &copy; 2011-2014 Patrick Varlet<br>
 Italian translation &copy; 2014 Milko Dalla Battista<br>
 Slovak translation &copy; 2011-2014 Dr. Martin Sereday</p>
 <div class="toplink"><a href="#">back to top</a></div>
+</section>
 
-<h2 id="credits">Credits</h2>
+<section id="credits">
+<h2>Credits</h2>
 <p>This plugin uses <a href="http://www.jstree.com/">jsTree</a>. Many thanks
 to Ivan Bozhanov, the developer of this library.</p>
 <p>jsTree uses <a href="http://jQuery.com">jQuery</a>. Many thanks to all
@@ -203,6 +216,7 @@ Harteg</a>, the "father" of CMSimple, and all developers of <a
 href="http://www.cmsimple-xh.org/"> CMSimple_XH</a> without whom this amazing
 CMS wouldn't exist.</p>
 <div class="toplink"><a href="#">back to top</a></div>
+</section>
 
 </div>
 
