added dev version warning to manuals

--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -19,6 +19,7 @@ umfangreichen Homepages übersichtlicher. Darüber hinaus können beim
 Pagemanager_XH ganze Menüstrukturen auf einmal verschoben werden.</p>
 
 <ul id="nav">
+<li><a href="#notice">Wichtiger Hinweis</a></li>
 <li><a href="#requirements">Voraussetzungen</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#settings">Einstellungen</a></li>
@@ -32,6 +33,13 @@ Pagemanager_XH ganze Menüstrukturen auf einmal verschoben werden.</p>
 
 <p><strong>Bitte lesen Sie diese Dokumentation <em>bevor</em> Sie auf Probleme
 stoßen!</strong></p>
+
+<section id="notice">
+<h2>Wichtiger Hinweis</h2>
+<p><strong>Pagemanager_XH 3 wurde bisher nicht in diversen Umgebungen getestet.
+Es ist eine so genannte Development-Version. Vorsicht bei der Verwendung!</strong></p>
+<div class="toplink"><a href="#">zum Seitenanfang</a></div>
+</section>
 
 <section id="requirements">
 <h2>Voraussetzungen</h2>
