--- a/help/help.htm
+++ b/help/help.htm
@@ -19,6 +19,7 @@ with many pages. With Pagemanager_XH it is also possible to rearrange whole
 submenus.</p>
 
 <ul id="nav">
+<li><a href="#notice">Important Notice</a></li>
 <li><a href="#requirements">Requirements</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#settings">Settings</a></li>
@@ -32,6 +33,13 @@ submenus.</p>
 
 <p><strong>Please do read this documentation <em>before</em> you encounter any
 problems!</strong></p>
+
+<section id="notice">
+<h2>Important Notice</h2>
+<p><strong>Pagemanager_XH 3 hasn't been tested so far in various environments.
+It is a so called development version. Use with caution!</strong></p>
+<div class="toplink"><a href="#">back to top</a></div>
+</section>
 
 <section id="requirements">
 <h2>Requirements</h2>
