Fix system check wrt. extension requirements
We don't need ext/xml anymore, but rather ext/json. ext/pcre is granted
anyway.

--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -45,7 +45,9 @@ Es ist eine so genannte Development-Version. Vorsicht bei der Verwendung!</stron
 <h2>Voraussetzungen</h2>
 <p>Pagemanager_XH ist ein Plugin für CMSimple_XH. Pagemanager_XH 3 benötigt
 CMSimple_XH &ge; 1.7. Zusätzlich benötigen sie noch das jQuery4CMSimple-Plugin,
-das in allen CMSimple_XH-Versionen ab 1.4.1 bereits enthalten ist.</p>
+das in allen CMSimple_XH-Versionen ab 1.4.1 bereits enthalten ist.
+Es benötigt ebenfalls PHP &ge; 5.3.0 mit der JSON Extension.
+</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 </section>
 
