--- a/help/help.htm
+++ b/help/help.htm
@@ -45,7 +45,9 @@ It is a so called development version. Use with caution!</strong></p>
 <h2>Requirements</h2>
 <p>Pagemanager_XH is a plugin for CMSimple_XH. Pagemanager_XH 3 requires
 CMSimple_XH &ge; 1.7. Additionally it requires the jQuery4CMSimple plugin, which
-is already contained in the standard download of CMSimple_XH since 1.4.1.</p>
+is already contained in the standard download of CMSimple_XH since 1.4.1.
+It also requires PHP &ge; 5.3.0 with the JSON extension.
+</p>
 <div class="toplink"><a href="#">back to top</a></div>
 </section>
 
