Document Fa_XH requirement and credit Font Awesome

--- a/help/help.htm
+++ b/help/help.htm
@@ -46,7 +46,7 @@
 <h2>Requirements</h2>
 <p>
     Pagemanager_XH is a plugin for CMSimple_XH &ge; 1.7.0. Additionally it
-    requires the jQuery4CMSimple plugin, which is already contained in the
+    requires the jQuery4CMSimple and Fa_XH plugins, which are already contained in the
     standard download of CMSimple_XH. It also requires PHP &ge; 5.3.0 with the
     JSON extension.
 </p>
@@ -255,6 +255,11 @@
     href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
     jQuery4CMSimple</a>. Many thanks to Holger Irmler, the author of this
     plugin.
+</p>
+<p>
+    This plugin uses <a href="http://fontawesome.io/">Font Awesome by Dave
+    Gandy</a>. Many thanks for making this great iconic font and CSS toolkit
+    available under a GPL friendly license.
 </p>
 <p>
     The plugin icon is designed by <a href="http://www.everaldo.com/">Everaldo
