--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -46,8 +46,8 @@
 <h2>Voraussetzungen</h2>
 <p>
     Pagemanager_XH ist ein Plugin für CMSimple_XH &ge; 1.7. Zusätzlich benötigt
-    es noch das jQuery4CMSimple-Plugin, das in allen Standarddownloads von
-    CMSimple_XH bereits enthalten ist. Es benötigt ebenfalls PHP &ge; 5.3.0 mit
+    es noch das jQuery4CMSimple und das Fa_XH Plugin, die in allen Standarddownloads von
+    CMSimple_XH bereits enthalten sind. Es benötigt ebenfalls PHP &ge; 5.3.0 mit
     der JSON Extension.
 </p>
 </section>
@@ -276,6 +276,12 @@
     href="http://www.cmsimple-xh.org/wiki/doku.php/extend:jquery4cmsimple">
     jQuery4CMSimple</a> zur Verfügung gestellt. Vielen Dank an Holger Irmler,
     den Entwickler dieses Plugins.
+</p>
+<p>
+    Dieses Plugin verwendet <a href="http://fontawesome.io/">Font Awesome von
+    Dave Gandy</a>. Vielen Dank für die Bereitstellung dieses großartigen
+    ikonischen Schriftarten- und CSS-Toolkits unter einer GPL freundlichen
+    Lizenz.
 </p>
 <p>
     Das Plugin-Icon wurde von <a href="http://www.everaldo.com/">Everaldo
