Overhaul system check
We're borrowing `SystemCheckService` from Foldergallery_XH and refactor
to use it. This allows us to get rid of the last Aha-Soft free
application icons.

We also add a check for the Fa_XH plugin.

--- a/help/help.htm
+++ b/help/help.htm
@@ -263,10 +263,7 @@
 </p>
 <p>
     The plugin icon is designed by <a href="http://www.everaldo.com/">Everaldo
-    Coelho</a>. Many thanks for publishing this icon under GPL. This plugin uses
-    free applications icons from <a
-    href="http://www.aha-soft.com/">Aha-Soft</a>. Many thanks to making these
-    icons freely available.
+    Coelho</a>. Many thanks for publishing this icon under GPL.
 </p>
 <p>
     Many thanks to the community at the <a
