--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -285,10 +285,7 @@
 </p>
 <p>
     Das Plugin-Icon wurde von <a href="http://www.everaldo.com/">Everaldo
-    Coelho</a> entworfen. Vielen Dank für die Veröffentlichung unter GPL. Dieses
-    Plugin verwendet "free application icons" von <a
-    href="http://www.aha-soft.com/">Aha-Soft</a>. Vielen Dank für die freie
-    Verwendbarkeit dieser Icons.
+    Coelho</a> entworfen. Vielen Dank für die Veröffentlichung unter GPL.
 </p>
 <p>
     Vielen Dank an die Gemeinschaft im <a
