Close #48: Default theme is unsuitable for dark templates
We are reluctant to change the default theme (or to override some theme
rules in Pagemanager's stylesheet), so we add the "proton" theme,
slightly adapt it to our needs, and make it the default. A particular
advantage of the "proton" theme are its checkbox images which fit much
better to the Font Awesome icons then the colored ones of the default
theme.

--- a/help/help.htm
+++ b/help/help.htm
@@ -257,6 +257,11 @@
     plugin.
 </p>
 <p>
+    The <em>proton</em> theme for jsTree is a slightly modified version of <a
+    href="https://github.com/orangehill/jstree-bootstrap-theme">jsTree Bootstrap
+    Theme</a>. Thanks for publishing this nice theme under MIT license.
+</p>
+<p>
     This plugin uses <a href="http://fontawesome.io/">Font Awesome by Dave
     Gandy</a>. Many thanks for making this great iconic font and CSS toolkit
     available under a GPL friendly license.
