--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -278,6 +278,12 @@
     den Entwickler dieses Plugins.
 </p>
 <p>
+    Das <em>proton</em> Theme für jsTree ist eine leicht angepasste Version des
+    <a href="https://github.com/orangehill/jstree-bootstrap-theme">jsTree
+    Bootstrap Themes</a>. Danke für die Veröffentlichung dieses schönen Themes
+    unter MIT Lizenz.
+</p>
+<p>
     Dieses Plugin verwendet <a href="http://fontawesome.io/">Font Awesome von
     Dave Gandy</a>. Vielen Dank für die Bereitstellung dieses großartigen
     ikonischen Schriftarten- und CSS-Toolkits unter einer GPL freundlichen
