--- a/help/help.htm
+++ b/help/help.htm
@@ -112,7 +112,7 @@
     overview of even extensive websites. You can open or close those by clicking
     on the small markers left to the page, or by double clicking their titles.
 </p>
-<img style="max-width:100%; margin:0 auto" src="pagemanager.jpg" alt="Pagemanager_XH screenshot">
+<img style="max-width:100%; margin:0 auto" src="pagemanager.png" alt="Pagemanager_XH screenshot">
 <p>
     Above the tree view of your website's pages you find Pagemanager_XH's
     <strong>toolbar</strong>. The toolbar is particularly useful, if your
