--- a/help/help.htm
+++ b/help/help.htm
@@ -38,7 +38,7 @@
 <h2>Important Notice</h2>
 <p class="important">
     Pagemanager_XH 3 hasn't been tested so far in various environments. It is a
-    so called beta version. Use with caution!
+    so called release candidate. Use with caution!
 </p>
 </section>
 
