--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -38,7 +38,7 @@
 <h2>Wichtiger Hinweis</h2>
 <p class="important">
     Pagemanager_XH 3 wurde bisher nicht in diversen Umgebungen getestet. Es ist
-    eine so genannte Beta-Version. Vorsicht bei der Verwendung!
+    ein so genannter Release-Candidate. Vorsicht bei der Verwendung!
 </p>
 </section>
 
