Close #52: Drag&Drop inside doesn't work in IE
We document this limitations including possible workarounds.

--- a/help/help.htm
+++ b/help/help.htm
@@ -207,6 +207,18 @@
 </p>
 </section>
 
+<section>
+<h3>Drag &amp; Drop in Internet Explorer</h3>
+<p>
+    There are known issues regarding drag &amp; drop operations in Internet
+    Explorer. Particularly, moving or copying a page inside another page doesn't
+    work with the default admin menu. The cause is a <a
+    href="https://github.com/jquery/jquery/issues/3676">limitation in
+    jQuery</a>. Either use the "clipboard" functionality, upgrade to Edge (or
+    another browser), or use an alternative admin menu.
+</p>
+</section>
+
 </section>
 
 <section id="license">
