--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -230,6 +230,20 @@
 </p>
 </section>
 
+<section>
+<h3>Drag &amp; Drop im Internet Explorer</h3>
+<p>
+    Es gibt bekannte Probleme bezüglich Drag &amp; Drop im Internet Explorer.
+    Insbesondere funktioniert das Verschieben oder Kopieren einer Seite in eine
+    andere Seite hinein nicht in Verbindung mit dem Standard-Admin-Menü. Die
+    Ursache ist eine <a
+    href="https://github.com/jquery/jquery/issues/3676">Einschränkung in
+    jQuery</a>. Verwenden Sie entweder die "Zwischenablage"-Funktionalität,
+    aktualisieren Sie auf Edge (oder einen anderen Browser) oder verwenden Sie
+    ein alternatives Admin-Menü.
+</p>
+</section>
+
 </section>
 
 <section id="license">
