--- a/help/help.htm
+++ b/help/help.htm
@@ -23,7 +23,7 @@
 <nav id="nav">
 <h2>Table of Contents</h2>
 <ul>
-<li><a href="#notice">Important Notice</a></li>
+<!--<li><a href="#notice">Important Notice</a></li>-->
 <li><a href="#requirements">Requirements</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#settings">Settings</a></li>
@@ -34,6 +34,7 @@
 </ul>
 </nav>
 
+<!--
 <section id="notice">
 <h2>Important Notice</h2>
 <p class="important">
@@ -41,6 +42,7 @@
     so called release candidate. Use with caution!
 </p>
 </section>
+-->
 
 <section id="requirements">
 <h2>Requirements</h2>
