--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -23,7 +23,7 @@
 <nav id="nav">
 <h2>Inhaltsverzeichnis</h2>
 <ul>
-<li><a href="#notice">Wichtiger Hinweis</a></li>
+<!--<li><a href="#notice">Wichtiger Hinweis</a></li>-->
 <li><a href="#requirements">Voraussetzungen</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#settings">Einstellungen</a></li>
@@ -34,6 +34,7 @@
 </ul>
 </nav>
 
+<!--
 <section id="notice">
 <h2>Wichtiger Hinweis</h2>
 <p class="important">
@@ -41,6 +42,7 @@
     ein so genannter Release-Candidate. Vorsicht bei der Verwendung!
 </p>
 </section>
+-->
 
 <section id="requirements">
 <h2>Voraussetzungen</h2>
