--- a/help/help.htm
+++ b/help/help.htm
@@ -34,15 +34,19 @@
 <h2 id="table-of-contents">Table of Contents</h2>
 <ul>
 <li><a href="#requirements">Requirements</a></li>
+<li><a href="#download">Download</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#settings">Settings</a></li>
 <li><a href="#usage">Usage</a></li>
 <li><a href="#limitations">Limitations</a></li>
+<li><a href="#troubleshooting">Troubleshooting</a></li>
 <li><a href="#license">License</a></li>
 <li><a href="#credits">Credits</a></li>
 </ul>
 <h2 id="requirements">Requirements</h2>
 <p>Pagemanager_XH is a plugin for CMSimple_XH ≥ 1.7.0. Additionally it requires the jQuery4CMSimple and Fa_XH plugins, which are already contained in the standard download of CMSimple_XH. It also requires PHP ≥ 5.3.0 with the JSON extension.</p>
+<h2 id="download">Download</h2>
+<p>The <a href="https://github.com/cmb69/pagemanager_xh/releases/latest">lastest release</a> is available for download on Github.</p>
 <h2 id="installation">Installation</h2>
 <p>The installation is done as with many other CMSimple_XH plugins. See the <a href="https://wiki.cmsimple-xh.org/doku.php/installation">CMSimple_XH wiki</a> for further details.</p>
 <ol type="1">
@@ -74,8 +78,12 @@
 <p>Pagemanager_XH <em>may</em> not work in installations with jQuery dependent plugins/addons/templates that don’t use jQuery4CMSimple, but import their own jQuery library. This won’t get fixed (as it’s not possible to fix it in all cases), because all developers are advised to use only jQuery4CMSimple together with all their jQuery based code for CMSimple_XH. So offending extensions should be updated!</p>
 <h3 id="drag-drop-in-internet-explorer">Drag &amp; Drop in Internet Explorer</h3>
 <p>There are known issues regarding drag &amp; drop operations in Internet Explorer. Particularly, moving or copying a page inside another page doesn’t work with the default admin menu. The cause is a <a href="https://github.com/jquery/jquery/issues/3676">limitation in jQuery</a>. Either use the “clipboard” functionality, upgrade to Edge (or another browser), or use an alternative admin menu.</p>
+<h2 id="troubleshooting">Troubleshooting</h2>
+<p>Report bugs and ask for support either on <a href="https://github.com/cmb69/pagemanager_xh/issues">Github</a> or in the <a href="https://cmsimpleforum.com/">CMSimple_XH Forum</a>.</p>
 <h2 id="license">License</h2>
-<p>Pagemanager_XH is licensed under <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
+<p>Pagemanager_XH is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
+<p>Pagemanager_XH is distributed in the hope that it will be useful, but <em>without any warranty</em>; without even the implied warranty of <em>merchantibility</em> or <em>fitness for a particular purpose</em>. See the GNU General Public License for more details.</p>
+<p>You should have received a copy of the GNU General Public License along with Pagemanager_XH. If not, see <a href="http://www.gnu.org/licenses/" class="uri">http://www.gnu.org/licenses/</a>.</p>
 <p>© 2011-2019 Christoph M. Becker</p>
 <p>Czech translation © 2011-2014 Josef Němec<br />
 Danish translation © 2011-2014 Jens Maegaard<br />
