--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -34,17 +34,21 @@
 <h2 id="inhaltsverzeichnis">Inhaltsverzeichnis</h2>
 <ul>
 <li><a href="#voraussetzungen">Voraussetzungen</a></li>
+<li><a href="#download">Download</a></li>
 <li><a href="#installation">Installation</a></li>
 <li><a href="#einstellungen">Einstellungen</a></li>
 <li><a href="#verwendung">Verwendung</a></li>
 <li><a href="#beschränkungen">Beschränkungen</a></li>
+<li><a href="#fehlerbehebung">Fehlerbehebung</a></li>
 <li><a href="#lizenz">Lizenz</a></li>
 <li><a href="#danksagung">Danksagung</a></li>
 </ul>
 <h2 id="voraussetzungen">Voraussetzungen</h2>
 <p>Pagemanager_XH ist ein Plugin für CMSimple_XH ≥ 1.7. Zusätzlich benötigt es noch das jQuery4CMSimple und das Fa_XH Plugin, die in allen Standarddownloads von CMSimple_XH bereits enthalten sind. Es benötigt ebenfalls PHP ≥ 5.3.0 mit der JSON Extension.</p>
+<h2 id="download">Download</h2>
+<p>Das <a href="https://github.com/cmb69/pagemanager_xh/releases/latest">aktuelle Release</a> kann von Github herunter geladen werden.</p>
 <h2 id="installation">Installation</h2>
-<p>Die Installation erfolgt wie bei vielen anderen CMSimple_XH-Plugins auch. Im <a href="http://www.cmsimple-xh.org/wiki/doku.php/de:installation">CMSimple_XH Wiki</a> finden sie ausführliche Hinweise.</p>
+<p>Die Installation erfolgt wie bei vielen anderen CMSimple_XH-Plugins auch. Im <a href="https://wiki.cmsimple-xh.org/doku.php/de:installation">CMSimple_XH Wiki</a> finden sie ausführliche Hinweise.</p>
 <ol type="1">
 <li>Sichern Sie die Daten auf Ihrem Server.</li>
 <li>Entpacken Sie die ZIP-Datei auf Ihrem Computer.</li>
@@ -74,8 +78,12 @@
 <p>Pagemanager_XH <em>könnte</em> in Installationen mit jQuery abhängigen Plugins/Addons/Templates, die jQuery4CMSimple nicht verwenden, sondern ihre eigene jQuery Bibliothek importieren, nicht funktionieren. Dieses Problem wird nicht behoben werden (es ist ohnehin nicht möglich, es für alle Fälle zu beheben), weil allen Entwicklern geraten wird, ausschließlich jQuery4CMSimple in Verbindung mit ihrem jQuery basierten Code für CMSimple_XH zu verwenden. Daher sollten diejenigen Erweiterungen aktualisiert werden, die sich nicht daran halten!</p>
 <h3 id="drag-drop-im-internet-explorer">Drag &amp; Drop im Internet Explorer</h3>
 <p>Es gibt bekannte Probleme bezüglich Drag &amp; Drop im Internet Explorer. Insbesondere funktioniert das Verschieben oder Kopieren einer Seite in eine andere Seite hinein nicht in Verbindung mit dem Standard-Admin-Menü. Die Ursache ist eine <a href="https://github.com/jquery/jquery/issues/3676">Einschränkung in jQuery</a>. Verwenden Sie entweder die “Zwischenablage”-Funktionalität, aktualisieren Sie auf Edge (oder einen anderen Browser) oder verwenden Sie ein alternatives Admin-Menü.</p>
+<h2 id="fehlerbehebung">Fehlerbehebung</h2>
+<p>Melden Sie Programmfehler und stellen Sie Supportanfragen entweder auf <a href="https://github.com/cmb69/pagemanager_xh/issues">Github</a> oder im <a href="https://cmsimpleforum.com/">CMSimple_XH Forum</a>.</p>
 <h2 id="lizenz">Lizenz</h2>
-<p>Pagemanager_XH kann unter Einhaltung der <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
+<p>Pagemanager_XH ist freie Software. Sie können es unter den Bedingungen der GNU General Public License, wie von der Free Software Foundation veröffentlicht, weitergeben und/oder modifizieren, entweder gemäß Version 3 der Lizenz oder (nach Ihrer Option) jeder späteren Version.</p>
+<p>Die Veröffentlichung von Pagemanager_XH erfolgt in der Hoffnung, daß es Ihnen von Nutzen sein wird, aber <em>ohne irgendeine Garantie</em>, sogar ohne die implizite Garantie der <em>Marktreife</em> oder der <em>Verwendbarkeit für einen bestimmten Zweck</em>. Details finden Sie in der GNU General Public License.</p>
+<p>Sie sollten ein Exemplar der GNU General Public License zusammen mit Pagemanager_XH erhalten haben. Falls nicht, siehe <a href="http://www.gnu.org/licenses/" class="uri">http://www.gnu.org/licenses/</a>.</p>
 <p>© 2011-2019 Christoph M. Becker</p>
 <p>Danish Übersetzung © 2011-2014 Jens Maegaard<br />
 Estnische Übersetzung © 2014 Alo Tanavots<br />
