--- a/help/help.htm
+++ b/help/help.htm
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-<h1 id="pagemanager_xh-user-manual">Pagemanager_XH – User manual</h1>
+<h1 id="pagemanager_xh">Pagemanager_XH</h1>
 <p>Pagemanager_XH simplifies the administration of pages of a CMSimple_XH installation. This plugin is comparable to the Menumanager plugin with regard to functionality, but by using a treeview it allows for better handling of websites with many pages. With Pagemanager_XH it is also possible to rearrange whole submenus.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <ul>
