--- a/help/help_de.htm
+++ b/help/help_de.htm
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-<h1 id="pagemanager_xh-handbuch">Pagemanager_XH – Handbuch</h1>
+<h1 id="pagemanager_xh">Pagemanager_XH</h1>
 <p>Pagemanager_XH vereinfacht die Verwaltung von Seiten in einer CMSimple_XH-Installation. Dieses Plugin ist vom Funktionsumfang vergleichbar mit dem Menumanager-Plugin, ist aber durch die Baumdarstellung auch bei umfangreichen Homepages übersichtlicher. Darüber hinaus können beim Pagemanager_XH ganze Menüstrukturen auf einmal verschoben werden.</p>
 <h2 id="inhaltsverzeichnis">Inhaltsverzeichnis</h2>
 <ul>
